--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"prisma:generate": "prisma generate --schema server/prisma/schema.prisma"
+		"prisma:generate": "prisma generate --schema server/prisma/schema.prisma",
+		"prisma:studio": "prisma studio --schema server/prisma/schema.prisma"
 	},
 	"dependencies": {
+		"@hono/zod-validator": "^0.7.4",
 		"@prisma/client": "^6.5.0",
 		"@radix-ui/react-label": "^2.1.2",
 		"@radix-ui/react-slot": "^1.1.2",
